--- a/OnlineStoreMVC/Views/Shared/ListProduct.cshtml
+++ b/OnlineStoreMVC/Views/Shared/ListProduct.cshtml
@@ -19,6 +19,10 @@
                 <div class="info-product-price">
                     <span class="item_price">@item.PriceFormatCurrency</span>
                 </div>
+                @if (item.SaleOff != 0)
+                {
+                    <div class="saleoff-item-groupproduct">@item.SaleOff%</div>
+                }
                 @*<a href="#" class="item_add single-item hvr-outline-out button2">Thêm Vào Giỏ</a>*@
             </div>
         </div>
