--- a/OnlineStoreMVC/Views/Product/ProductDetails.cshtml
+++ b/OnlineStoreMVC/Views/Product/ProductDetails.cshtml
@@ -13,68 +13,92 @@
     <script src="~/Content/plugins/owl-sliderbar/js/owl.carousel.min.js"></script>
     <script src="~/Scripts/DisplayProduct/DetailProduct.js"></script>
     <script>
-    $(document).ready(function () {
-        DetailProductManagement.init();
-    });
+        $(document).ready(function () {
+            DetailProductManagement.init();
+        });
     </script>
+}
+
+@{
+    var discountPercentage = 0;
+    if (Model.OldPrice != null && Model.OldPrice != 0)
+    {
+        discountPercentage = 100 - (int)(Model.Price / (decimal)Model.OldPrice * 100);
+    }
 }
 
 <!-- single -->
 <div class="single">
     <div class="container">
-        <div class="col-md-6 single-right-left animated wow slideInUp animated" style="max-width:500px;" data-wow-delay=".5s" style="visibility: visible; animation-delay: 0.5s; animation-name: slideInUp;">
-            <div class="single-w3agile">
-                <div id="picture-frame">
-                    <img src="@Model.CoverImageUrl.largeImagePath" data-src="@Model.CoverImageUrl.largeImagePath" alt="" class="img-responsive" />
+        <div class="row" style="padding:15px;">
+            <div class="col-md-6 single-right-left animated wow slideInUp animated" style="max-width:400px;" data-wow-delay=".5s" style="visibility: visible; animation-delay: 0.5s; animation-name: slideInUp;">
+                <div class="single-w3agile">
+                    <div id="picture-frame">
+                        <img src="@Model.CoverImageUrl.largeImagePath" data-src="@Model.CoverImageUrl.largeImagePath" alt="" class="img-responsive" />
+                    </div>
+                </div>
+                <div id="thumbs_list">
+                    <ul id="thumbs_list_frame">
+                        @foreach (var item in Model.Images)
+                        {
+                            <li id="thumbnail_120" data-imagepath='@item.largeImagePath'>
+                                <a href="javascript:void(0);" title='@Model.Name'>
+                                    <img class="img-responsive" id="thumb_120" data-zoom-image='@item.largeImagePath' src='@item.smallImagePath' alt='@Model.Name' title='@Model.Name' height="80" width="80" itemprop="image">
+                                </a>
+                            </li>
+                        }
+                    </ul>
                 </div>
             </div>
-            <div id="thumbs_list">
-                <ul id="thumbs_list_frame">
-                    @foreach (var item in Model.Images)
+            <div class="col-md-6 single-right-left simpleCart_shelfItem animated wow slideInRight animated" data-wow-delay=".5s" style="visibility: visible; animation-delay: 0.5s; animation-name: slideInRight;">
+                <p><span class="productname-productdetails">@Model.Name</span></p>
+                <div class="pricepanel-productdetails">
+                    <div class="productprice-productdetails">
+                        Giá: <b>@Model.PriceFormatCurrency</b>
+                    </div>
+                    <div class="oldprice-productdetails"><del>@Model.OldPriceFormatCurrency</del></div>
+                    @if (discountPercentage != 0)
                     {
-                        <li id="thumbnail_120" data-imagepath='@item.largeImagePath'>
-                            <a href="javascript:void(0);" title='@Model.Name'>
-                                <img class="img-responsive" id="thumb_120" data-zoom-image='@item.largeImagePath' src='@item.smallImagePath' alt='@Model.Name' title='@Model.Name' height="80" width="80" itemprop="image">
-                            </a>
-                        </li>
+                        <div class="discount-productdetails"><b>@discountPercentage%</b></div>
                     }
+                    <div class="note-productdetails">(Giá trên đã bao gồm thuế VAT)</div>
+                </div>
+                <div class="productinforcontainer">
+                    <span class="left-label">Thương hiệu</span>@Html.ActionLink(Model.Branch.Name, "DisplayProductsOfBranch", "Product", new { @id = Model.Branch.Id }, new { @class="cl-green"})
+                </div>
+                <div class="productinforcontainer">
+                    <span class="left-label">Mã sản phẩm</span><span class="cl-green">@Model.ProductCode</span>
+                </div>
+                <div class="productinforcontainer">
+                    <span class="left-label">Tags</span>@Html.Partial("_ProductTagList", Model.Groups)
+                </div>
+                <div class="productinforcontainer">@Model.Description</div>
+                <div class="clearfix"> </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="narbar-description col-md-12" id="scrollSpy_ProductDetails">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a href="#productDescription_Tab">Mô tả sản phẩm</a></li>
+                    <li><a href="#productSpecification_Tab">Thông Số Kỹ Thuật</a></li>
                 </ul>
-            </div>
-        </div>
-        <div class="col-md-6 single-right-left simpleCart_shelfItem animated wow slideInRight animated" data-wow-delay=".5s" style="visibility: visible; animation-delay: 0.5s; animation-name: slideInRight;">
-            <h3>@Model.Name</h3>
-            <p style="color:red;font-size:30px;"><span class="item_price">@Model.PriceFormatCurrency</span></p>
-            <p>Thương hiệu: @Html.ActionLink(Model.Branch.Name, "DisplayProductsOfBranch", "Product", new { @id = Model.Branch.Id }, null)</p>
-            <p>Tags: @Html.Partial("_ProductTagList", Model.Groups)</p>
-            <div class="description">
-                <h5 style="color:#000;font-style: italic;">@Model.Description</h5>
-            </div>
-        </div>
-        <div class="clearfix"> </div>
-
-        <div class="narbar-description" id="scrollSpy_ProductDetails">
-            <ul class="nav nav-tabs" style="background-color:#000">
-                <li class="active"><a href="#productDescription_Tab">Mô tả sản phẩm</a></li>
-                <li><a href="#productSpecification_Tab">Thông Số Kỹ Thuật</a></li>
-            </ul>
-            <div class="my-content">
-                <div id="productDescription_Tab">
-                    <h5 class="tabtitle-narbar-description">CHI TIẾT SẢN PHẨM</h5>
-                    <p>
-                        @Html.Raw(Model.Description2)
-                    </p>
-                </div>
-                <div id="productSpecification_Tab" style="margin-top:15px;">
-                    <h5 class="tabtitle-narbar-description">THÔNG SỐ KỸ THUẬT</h5>
-                    <p>
-                        @Html.Raw(Model.Specification)
-                    </p>
+                <div class="my-content">
+                    <div id="productDescription_Tab">
+                        <h5 class="tabtitle-narbar-description">CHI TIẾT SẢN PHẨM</h5>
+                        <p>
+                            @Html.Raw(Model.Description2)
+                        </p>
+                    </div>
+                    <div id="productSpecification_Tab" style="margin-top:15px;">
+                        <h5 class="tabtitle-narbar-description">THÔNG SỐ KỸ THUẬT</h5>
+                        <p>
+                            @Html.Raw(Model.Specification)
+                        </p>
+                    </div>
                 </div>
             </div>
+            @Html.Action("GetListProductHasSameBranch", new { @productId = Model.Id, @branchId = Model.Branch.Id })
+            @Html.Action("GetListProductHasSameGroup", new { @productId = Model.Id })
         </div>
-        @Html.Action("GetListProductHasSameBranch", new { @productId = Model.Id, @branchId = Model.Branch.Id })
-        @Html.Action("GetListProductHasSameGroup", new { @productId = Model.Id })
-
     </div>
 </div>
-
