fix some issue UI and responsive

--- a/OnlineStoreMVC/Content/display-product/display-product-view.css
+++ b/OnlineStoreMVC/Content/display-product/display-product-view.css
@@ -163,7 +163,7 @@ ul.product_list.grid > li .product-container .product-image-container.image-cont
 }
 
 .productlist-displayproduct{
-    min-height:900px;
+    /*min-height:900px;*/
 }
 
 /* end filter panel*/
