--- a/OnlineStoreMVC/Views/Shared/_BrandBanner.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_BrandBanner.cshtml
@@ -35,14 +35,14 @@
         width: 100%;
     }
     .b-brandbanner .owl-carousel{
-        width:50%;
+        padding:0 1px;
     }
 </style>
 <div class="b-brandbanner row">
     @for (int i = 0; i < numberBrands/2; i++)
     {
-        <div class="owl-carousel owl-theme col-md-6 col-sm-6 col-xs-6">
-            <div class="item" style="padding-bottom: 30px;">
+        <div class="owl-carousel owl-theme col-md-6 col-sm-12 col-xs-12">
+            <div class="item" style="padding-bottom: 2px;">
                 <a href="/Product/DisplayProductsOfBranch/@Model[i*2].Id">
                     <img class="coverimage-brandlist-horizontalbar" title="@Model[i * 2].Name" src="@Model[i * 2].CoverImagePath" />
                     @*<p class="brandname-brandlist-horizontalbar">@Model[i * 2].Name</p>*@
