--- a/OnlineStoreMVC/Views/Shared/_GroupProductsPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_GroupProductsPartial.cshtml
@@ -68,8 +68,8 @@
     <div class="title-groupproduct" style="display:block;height:40px;">
         <span class="category-title-groupproduct" style="display:inline-block;">@Title</span>
         <div class="arrow-right"></div>
-        <a class="btn btn-next-groupproduct pull-right"><i class="glyphicon glyphicon-chevron-right"></i></a>
-        <a class="btn btn-previous-groupproduct pull-right"><i class="glyphicon glyphicon-chevron-left"></i></a>
+        @*<a class="btn btn-next-groupproduct pull-right"><i class="glyphicon glyphicon-chevron-right"></i></a>
+        <a class="btn btn-previous-groupproduct pull-right"><i class="glyphicon glyphicon-chevron-left"></i></a>*@
     </div>
     <div class="products-groupproduct wrap divProductBanner" style="display: block; width: 100%; margin: 0px;">
         <div class="owl-carousel owl-theme ">
