--- a/OnlineStoreMVC/Areas/Admin/Views/Product/Create.cshtml
+++ b/OnlineStoreMVC/Areas/Admin/Views/Product/Create.cshtml
@@ -11,6 +11,7 @@
         // CKEditor
         var editor = CKEDITOR.instances['Description2'];
         if (editor) { editor.destroy(true); }
+        CKEDITOR.replace('Description', { enterMode: CKEDITOR.ENTER_BR });
         CKEDITOR.replace('Description2', { enterMode: CKEDITOR.ENTER_BR });
         CKEDITOR.replace('Specification', { enterMode: CKEDITOR.ENTER_BR });
         CKFinder.setupCKEditor(null, "/Content/ckfinder/", null, null);
@@ -105,7 +106,7 @@
                             <div class="form-group">
                                 @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
-                                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.TextAreaFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                                 </div>
                             </div>
