--- a/OnlineStoreMVC/Content/display-product/search-result.css
+++ b/OnlineStoreMVC/Content/display-product/search-result.css
@@ -26,7 +26,7 @@
 /* end search form */
 
 .b-productItems h5 {
-    color: #FDA30E;
+    color: #116080;
     font-size: 25px;
     text-transform: uppercase;
     margin: 18px 0;
