--- a/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
@@ -6,22 +6,19 @@
         <div class="col-md-2 col-sm-12 col-xs-12 header-left">
             <h1><a href="/Home/Index"><img src="~/Content/Images/TestImages/logo3.jpg"></a></h1>
         </div>
-        <div class="col-md-7  col-sm-12 col-xs-12 header-middle">
-            <form action="/Product/SearchProduct" method="get">
+        <div class="col-md-6 col-sm-12 col-xs-12 header-middle">
+            <form action="/Product/SearchProduct" method="get" class="form-searchbox">
                 <div class="search">
                     <input type="search" value="@Request.QueryString["searchString"]" placeholder="Tìm Kiếm" name="searchString">
                 </div>
-                <div class="section_room">
-                    @Html.DropDownList("searchType")
-
-                </div>
                 <div class="sear-sub">
-                    <input type="submit" value="">
+                    <input type="submit" value="Tìm Kiếm">
                 </div>
-                <div class="clearfix"></div>
+                @*<div class="clearfix"></div>*@
             </form>
         </div>
-        <div class="col-md-3 col-sm-12 col-xs-12 header-right footer-bottom">
+        <div class="col-md-4 col-sm-12 col-xs-12 header-right footer-bottom">
+            <a class="btn-pricereport">Báo giá nhanh</a>
             <ul>
                 <li>
                     <a href="mailto:info@example.com">info@example.com</a>
@@ -55,13 +52,16 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar_menu_HomePage navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav menu__list">
-                            <li class="active menu__item menu__item--current"><a class="menu__link" href="/Home/Index">Trang Chủ <span class="sr-only">(current)</span></a></li>
                             <li class="dropdown menu__item">
-                                <a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Danh Mục sản phẩm <span class="caret"></span></a>
-                                <ul class="dropdown-menu multi-column columns-3">
+                                <a href="#" class="dropdown-toggle menu__link dropdown dropbtn ddbtn-listcategory" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                    <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                                    Danh Mục sản phẩm
+                                </a>
+                                <ul class="dropdown-menu dropdown-content">
                                     @Html.Action("SubCategoriesPatial", "Home")
                                 </ul>
                             </li>
+                            <li class="active menu__item menu__item--current"><a class="menu__link" href="/Home/Index">Trang Chủ <span class="sr-only">(current)</span></a></li>
                             <li class="menu__item">@Html.ActionLink("Liên Hệ", "Contact", "Home", new { @class = "menu__link" })</li>
                         </ul>
                     </div>
@@ -87,7 +87,7 @@
     </div>
 </div>
 <!-- //banner-top -->
-<div class="container b-mainbrand-topmenu">
+@*<div class="container b-mainbrand-topmenu">
     <div class="row">
         <div class="divCategory_HomePage_Container">
 
@@ -104,4 +104,24 @@
             }
         </div>
     </div>
-</div>
+</div>*@
+
+<script>
+
+        $(function () {
+            $(window).resize(function () {
+                var dropdownButtonWidth = $(".dropdown-menu.dropdown-content").outerWidth();
+                var navbarMenuWidth = $(".navbar_HomePage").outerWidth();
+                var mainDropDownHeight = $(".dropdown-menu.dropdown-content").outerHeight();
+                var dropdownContentPanels = $(".dropdown-content-panel");
+                $.each(dropdownContentPanels, function (i, item) {
+                    $(item).outerWidth(navbarMenuWidth - dropdownButtonWidth)
+                    .css("left", dropdownButtonWidth-3)
+                    .outerHeight(mainDropDownHeight);
+                })
+            });
+
+            $(window).trigger('resize');
+        });
+
+    </script>
