--- a/OnlineStoreMVC/Views/Shared/_ListSubCategory.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_ListSubCategory.cshtml
@@ -1,15 +1,7 @@
 ﻿@model List<OnlineStore.Model.ViewModel.SummaryCategoryViewModel>
 
-@{
-    var numberOfSubCatefories = 0;
-    if (Model != null)
-    {
-        numberOfSubCatefories = Model.Count();
-    }
-    var numberOfPanel = numberOfSubCatefories / 4 + 1;
-}
 
-<div class="row">
+@*<div class="row">
     @for (int i = 0; i < numberOfPanel; i++)
     {
         <div class="col-sm-3">
@@ -23,4 +15,34 @@
     }
 
     <div class="clearfix"></div>
-</div>
+</div>*@
+
+@for (int i = 0; i < Model.Count(); i++)
+{
+    <li class="dropdown main-category-item">
+        <a class="menuitem-category dropbtn" href="/Product/GetProductByCategory/@Model[i].Id">
+            <i class="fa fa-angle-right" aria-hidden="true"></i>@Model[i].Name
+        </a>
+        <ul class="dropdown-menu dropdown-content-panel">
+            @{
+                var numberOfSubCatefories = 0;
+                if (Model != null)
+                {
+                    numberOfSubCatefories = Model[i].SubCategories.Count();
+                }
+                var numberOfPanel = numberOfSubCatefories / 4 + 1;
+            }
+            @for (int j = 0; j < numberOfPanel; j++)
+            {
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <ul class="multi-column-dropdown">
+                        @for (int k = j * 4; k < (j + 1) * 4 && k < numberOfSubCatefories; k++)
+                        {
+                            <li><a class="menuitem-category" href="/Product/GetProductByCategory/@Model[i].SubCategories[k].Id"><i class="fa fa-angle-right" aria-hidden="true"></i>@Model[i].SubCategories[k].Name</a></li>
+                        }
+                    </ul>
+                </div>
+            }
+        </ul>
+    </li>
+}
