Separate style file

--- a/OnlineStoreMVC/Content/display-product/display-product-view.css
+++ b/OnlineStoreMVC/Content/display-product/display-product-view.css
@@ -175,3 +175,359 @@ ul.product_list.grid > li .product-container .product-image-container.image-cont
 
 /* end right panel */
 
+.filter-price h3 {
+    color: #5cd2ff;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 25px;
+}
+/*-- treeview --*/
+.css-treeview label {
+    padding: 5px;
+    border-radius: 3px;
+    margin: 2px;
+    font-size: 16px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    color: #999;
+}
+
+.css-treeview a {
+    border-radius: 3px;
+    margin: 2px;
+    font-size: 15px;
+}
+
+.css-treeview ul,
+.css-treeview li {
+    list-style: none;
+}
+
+.css-treeview input {
+    position: absolute;
+    opacity: 0;
+}
+
+.css-treeview {
+    font: normal 11px "Segoe UI", Arial, Sans-serif;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+    .css-treeview a {
+        color: #999;
+        text-decoration: none;
+    }
+
+        .css-treeview a:hover {
+            text-decoration: underline;
+        }
+
+    .css-treeview input + label + ul {
+        margin: 0 0 0 22px;
+    }
+
+    .css-treeview input + label + ul {
+        display: none;
+    }
+
+    .css-treeview label,
+    .css-treeview label::before {
+        cursor: pointer;
+    }
+
+    .css-treeview input:disabled + label {
+        cursor: default;
+        opacity: .6;
+    }
+
+    .css-treeview input:checked:not(:disabled) + label + ul {
+        display: block;
+    }
+
+    .css-treeview label,
+    .css-treeview label::before {
+        background: url("../Images/TestImages/icons1.png") no-repeat 0px 7px !important;
+    }
+
+        .css-treeview label,
+        .css-treeview a,
+        .css-treeview label::before {
+            display: inline-block;
+            vertical-align: top;
+        }
+
+    .css-treeview label {
+        background-position: 18px 0;
+    }
+
+        .css-treeview label::before {
+            content: "";
+            width: 16px;
+            margin: 0 22px 0 0;
+            vertical-align: middle;
+            background-position: 0 -32px;
+        }
+
+    .css-treeview input:checked + label::before {
+        background-position: 0 -16px;
+    }
+
+/* webkit adjacent element selector bugfix */
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    .css-treeview {
+        -webkit-animation: webkit-adjacent-element-selector-bugfix infinite 1s;
+    }
+}
+
+@-webkit-keyframes webkit-adjacent-element-selector-bugfix {
+    from {
+        padding: 0;
+    }
+
+    to {
+        padding: 0;
+    }
+}
+
+/*-- //treeview --*/
+.css-treeview {
+    border: 1px solid #d2d2d2;
+}
+
+    .css-treeview h4 {
+        color: #116080;
+        text-align: center;
+        background: #f7f7f7;
+        padding: 17px 0;
+        font-size: 26px;
+        font-weight: 100;
+        border-bottom: 1px solid #d2d2d2;
+    }
+
+.tree-list-pad {
+    padding: 30px 30px;
+}
+
+.community-poll {
+    border: 1px solid #d2d2d2;
+    /*margin-top: 30px;*/
+}
+
+.radio {
+    position: relative;
+    display: inline-block;
+    margin-left: 15px;
+}
+
+    .radio:first-child {
+        margin-left: 0;
+        margin: 0;
+    }
+
+.radio {
+    padding-left: 22px;
+    line-height: 28px;
+    color: #404040;
+    cursor: pointer;
+}
+
+    .radio input[type="radio"] {
+        position: absolute;
+        left: -9999px;
+    }
+
+.radio-btns label {
+    font-size: 14px;
+    color: #000;
+    padding: 0px 0 0 10px;
+    font-weight: 600;
+}
+
+.radio i {
+    position: absolute;
+    top: 5px;
+    left: 0;
+    display: block;
+    width: 18px;
+    height: 18px;
+    outline: none;
+    border: 3px solid #5cd2ff;
+    background: #fff;
+    cursor: pointer;
+}
+
+.radio i {
+    border-radius: 50%;
+}
+
+.radio input + i:after {
+    position: absolute;
+    opacity: 0;
+    transition: opacity 0.1s;
+    -o-transition: opacity 0.1s;
+    -ms-transition: opacity 0.1s;
+    -moz-transition: opacity 0.1s;
+    -webkit-transition: opacity 0.1s;
+}
+
+.radio input + i:after {
+    content: '';
+    top: 6px;
+    left: 7px;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.radio input:checked + i:after {
+    opacity: 1;
+}
+
+label.checkbox {
+    width: 28%;
+    floaT: left;
+}
+/*** normal state ***/
+.radio i {
+    transition: border-color 0.3s;
+    -o-transition: border-color 0.3s;
+    -ms-transition: border-color 0.3s;
+    -moz-transition: border-color 0.3s;
+    -webkit-transition: border-color 0.3s;
+}
+/*** checked state ***/
+.radio input + i:after {
+    content: '';
+    background: url("../Images/TestImages/tick-mark1.png") no-repeat center;
+    top: 1px;
+    left: 1px;
+    width: 9px;
+    height: 9px;
+    text-align: center;
+}
+
+.radio input:checked + i {
+    border: 3px solid #5cd2ff;
+    background: #fff;
+}
+
+.swit {
+    padding: 30px 30px;
+}
+
+.check_box {
+    margin-bottom: 5px;
+}
+
+.community-poll h4 {
+    color: #116080;
+    text-align: center;
+    background: #f7f7f7;
+    padding: 17px 0;
+    font-size: 26px;
+    font-weight: 100;
+    border-bottom: 1px solid #d2d2d2;
+}
+
+.swit label {
+    padding: 0 0 0 10px;
+    margin: 0;
+    font-size: 16px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    color: #999;
+}
+
+.swit input[type="submit"] {
+    background: #7B7B7B;
+    color: #fff;
+    font-size: 15px;
+    border: none;
+    outline: none;
+    -webkit-appearance: none;
+    padding: 7px 24px;
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    margin: 19px 0 0;
+}
+
+    .swit input[type="submit"]:hover {
+        background: #5cd2ff;
+    }
+/*-- //treeview --*/
+.men-wear-left {
+    padding-left: 0;
+}
+
+.men-wear-bottom {
+    margin: 50px 0;
+}
+
+.men-wear-right h4 {
+    color: #5cd2ff;
+    font-size: 27px;
+    margin: 0px 0 24px;
+}
+
+.men-wear-right p {
+    font-size: 15px;
+    color: #999;
+    line-height: 2.2em;
+}
+
+.products-right {
+    padding-right: 0;
+}
+
+.no-pad-men {
+    padding: 0 25px 0 0 !important;
+}
+
+.products-right h5 {
+    color: #116080;
+    font-size: 25px;
+    text-transform: uppercase;
+}
+
+.sort-grid {
+    padding: 11px 0;
+    border-top: 1px solid #d2d2d2;
+    border-bottom: 1px solid #d2d2d2;
+    margin-bottom: 35px;
+}
+
+.sorting {
+    float: left;
+    width: 46%;
+}
+
+    .sorting h6 {
+        float: left;
+        font-size: 16px;
+        font-family: 'Lato', sans-serif;
+        margin: 7px 40px 0 0;
+    }
+
+    .sorting select {
+        float: left;
+        padding: 6px 13px;
+        font-size: 14px;
+        color: #999;
+    }
+
+.single-pro {
+    margin-top: 30px;
+}
+
+.pagination {
+    margin: 34px 15px 0 0;
+}
+/*-- //men-wear --*/
+
