--- a/OnlineStoreMVC/Views/Home/Contact.cshtml
+++ b/OnlineStoreMVC/Views/Home/Contact.cshtml
@@ -2,16 +2,10 @@
     ViewBag.Title = "Liên hệ";
 }
 @section css{
-    <style>
-        #map {
-            height: 400px;
-            width: 100%;
-        }
-    </style>
+    <link href="~/Content/webcss/contact.css" rel="stylesheet" />
 }
 
 @section scripts{
-
     <script>
         function initMap() {
             var uluru = { lat: 16.0486971, lng: 108.2354558 };
