--- a/OnlineStoreMVC/Content/display-product/detail-product.css
+++ b/OnlineStoreMVC/Content/display-product/detail-product.css
@@ -117,3 +117,232 @@
 .cl-green {
     color: #0f8200;
 }
+
+/*-- single-page --*/
+.single {
+    padding: 90px 0;
+}
+
+.single-right-left h3 {
+    text-transform: capitalize;
+    font-size: 24px;
+    color: #5cd2ff;
+    margin: 0;
+}
+
+.single-right-left p {
+    color: #000;
+    font-size: 23px;
+    margin: .5em 0 1em;
+}
+
+.single-right-left del {
+    color: #A7A7A7;
+    margin-left: 10px;
+}
+
+.description {
+    margin: 1.5em 0;
+}
+
+    .description h5 {
+        color: #989898;
+        font-size: 16px;
+        font-family: 'Lato', sans-serif;
+        margin-bottom: 12px;
+    }
+
+    .description p {
+        font-size: 14px;
+        color: #999;
+        line-height: 1.8em;
+        margin: 0.5em 0 0;
+    }
+
+.occasional {
+    margin: 2em 0;
+}
+
+    .color-quality-right h5, .occasional h5 {
+        color: #000;
+        font-size: 18px;
+        margin: 0 0 12px;
+    }
+
+.color-quality-right select {
+    padding: 5px 21px;
+}
+
+.colr {
+    width: 33.333%;
+    float: left;
+}
+
+.description input[type="text"] {
+    padding: 8px 8px;
+    color: #ccc;
+    font-size: 13px;
+    width: 45%;
+    outline: none;
+}
+
+.description input[type="submit"] {
+    color: #fff;
+    font-size: 16px;
+    background: #5cd2ff;
+    border: none;
+    outline: none;
+    padding: 7px 17px 9px;
+}
+
+    .description input[type="submit"]:hover {
+        background: #000;
+    }
+
+.occasion-cart a {
+    padding: 8px 15px;
+    text-decoration: none;
+    color: #fff;
+    font-size: 16px;
+}
+
+.bootstrap-tab {
+    margin: 5em 0 0;
+}
+
+.bootstrap-tab-text p {
+    font-size: 14px;
+    color: #999;
+    line-height: 1.8em;
+}
+
+.bootstrap-tab-text h5, .add-review h4 {
+    text-transform: uppercase;
+    font-size: 1.2em;
+    color: #212121;
+    margin: 2em 0;
+}
+
+.bootstrap-tab-text p span {
+    display: block;
+    margin: 2em 0 0;
+}
+
+.bootstrap-tab ul li a {
+    font-size: 1em;
+    color: #999;
+}
+
+.dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
+    background-color: #5cd2ff;
+}
+
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+    color: #FFFFFF !important;
+}
+
+.bootstrap-tab-text-grid-left {
+    float: left;
+    width: 14%;
+}
+
+.bootstrap-tab-text-grid-right {
+    float: right;
+    width: 83%;
+}
+
+    .bootstrap-tab-text-grid-right ul li {
+        display: inline-block;
+    }
+
+        .bootstrap-tab-text-grid-right ul li:nth-child(2) {
+            float: right;
+        }
+
+        .bootstrap-tab-text-grid-right ul li a {
+            font-size: 1em;
+            color: #5cd2ff;
+            text-transform: uppercase;
+            text-decoration: none;
+        }
+
+            .bootstrap-tab-text-grid-right ul li a:hover {
+                color: #212121;
+            }
+
+            .bootstrap-tab-text-grid-right ul li a span {
+                left: -1em;
+            }
+
+.bootstrap-tab-text-grids {
+    margin: 3em 0 0 0em;
+}
+
+.bootstrap-tab-text-grid-right p {
+    margin: 2em 0 0;
+    color: #999;
+    font-size: 15px;
+    line-height: 2em;
+}
+
+.bootstrap-tab-text-grid-left img {
+    border: 2px solid #000;
+    border-left: 2px solid #5cd2ff;
+    border-bottom: 2px solid #5cd2ff;
+    border-radius: 100%;
+    padding: 8px 8px;
+    width: 86%;
+}
+
+.bootstrap-tab-text-grid:nth-child(2) {
+    margin: 3em 0 0;
+}
+
+.add-review form {
+    margin: 2em 0 0;
+}
+
+.add-review input[type="text"], .add-review input[type="email"], .add-review textarea {
+    outline: none;
+    padding: 10px;
+    border: 1px solid #D2D2D2;
+    width: 49.35%;
+    font-size: 15px;
+    color: #5cd2ff;
+}
+
+.add-review input[type="email"] {
+    margin-left: 1%;
+}
+
+.add-review textarea {
+    width: 100% !important;
+    min-height: 150px;
+    margin: 1em 0;
+    resize: none;
+}
+
+.add-review input[type="text"]:nth-child(3) {
+    width: 100%;
+    margin: 1em 0;
+}
+
+.add-review input[type="submit"] {
+    outline: none;
+    padding: 10px 0;
+    background: #5cd2ff;
+    border: none;
+    width: 30%;
+    font-size: 1em;
+    color: #fff;
+}
+
+    .add-review input[type="submit"]:hover {
+        background: #000;
+    }
+
+.nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
+    background-color: #5cd2ff;
+    color: #fff;
+}
+/*-- //single-page --*/
