--- a/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
@@ -55,14 +55,14 @@
                             <li class="dropdown menu__item">
                                 <a href="#" class="dropdown-toggle menu__link dropdown dropbtn ddbtn-listcategory" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                     <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
-                                    Danh Mục sản phẩm
+                                    Danh mục sản phẩm
                                 </a>
                                 <ul class="dropdown-menu dropdown-content">
                                     @Html.Action("SubCategoriesPatial", "Home")
                                 </ul>
                             </li>
-                            <li class="active menu__item menu__item--current"><a class="menu__link" href="/Home/Index">Trang Chủ <span class="sr-only">(current)</span></a></li>
-                            <li class="menu__item">@Html.ActionLink("Liên Hệ", "Contact", "Home", new { @class = "menu__link" })</li>
+                            <li class="active menu__item menu__item--current"><a class="menu__link" href="/Home/Index">Trang chủ <span class="sr-only">(current)</span></a></li>
+                            <li class="menu__item">@Html.ActionLink("Liên hệ", "Contact", "Home", new { @class = "menu__link" })</li>
                         </ul>
                     </div>
                 </div>
