--- a/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
@@ -62,7 +62,8 @@
                                 </ul>
                             </li>
                             <li class="active menu__item menu__item--current"><a class="menu__link" href="/Home/Index">Trang chủ <span class="sr-only">(current)</span></a></li>
-                            <li class="menu__item">@Html.ActionLink("Liên hệ", "Contact", "Home", new { @class = "menu__link" })</li>
+                            <li class="menu__item">@Html.ActionLink("Tư vấn kết nối", "Index", "News", null, new { @class = "menu__link" })</li>
+                            <li class="menu__item">@Html.ActionLink("Liên hệ", "Contact", "Home", null, new { @class = "menu__link" })</li>
                         </ul>
                     </div>
                 </div>
@@ -88,40 +89,40 @@
 </div>
 <!-- //banner-top -->
 @*<div class="container b-mainbrand-topmenu">
-    <div class="row">
-        <div class="divCategory_HomePage_Container">
+        <div class="row">
+            <div class="divCategory_HomePage_Container">
 
-            @{
-                var categoriesList = ViewBag.TopCategoriesList as IEnumerable<OnlineStore.Model.ViewModel.SummaryCategoryViewModel>;
-                foreach (var category in categoriesList)
-                {
+                @{
+                    var categoriesList = ViewBag.TopCategoriesList as IEnumerable<OnlineStore.Model.ViewModel.SummaryCategoryViewModel>;
+                    foreach (var category in categoriesList)
+                    {
 
-                    <div class="col-sm-2 divCategory_HomePage">
-                        <a href="/Product/GetProductByCategory/@category.Id"><i class="fa fa-angle-right" aria-hidden="true"></i>@category.Name</a>
-                    </div>
+                        <div class="col-sm-2 divCategory_HomePage">
+                            <a href="/Product/GetProductByCategory/@category.Id"><i class="fa fa-angle-right" aria-hidden="true"></i>@category.Name</a>
+                        </div>
 
+                    }
                 }
-            }
+            </div>
         </div>
-    </div>
-</div>*@
+    </div>*@
 
 <script>
 
-        $(function () {
-            $(window).resize(function () {
-                var dropdownButtonWidth = $(".dropdown-menu.dropdown-content").outerWidth();
-                var navbarMenuWidth = $(".navbar_HomePage").outerWidth();
-                var mainDropDownHeight = $(".dropdown-menu.dropdown-content").outerHeight();
-                var dropdownContentPanels = $(".dropdown-content-panel");
-                $.each(dropdownContentPanels, function (i, item) {
-                    $(item).outerWidth(navbarMenuWidth - dropdownButtonWidth)
-                    .css("left", dropdownButtonWidth-3)
-                    .outerHeight(mainDropDownHeight);
-                })
-            });
-
-            $(window).trigger('resize');
+    $(function () {
+        $(window).resize(function () {
+            var dropdownButtonWidth = $(".dropdown-menu.dropdown-content").outerWidth();
+            var navbarMenuWidth = $(".navbar_HomePage").outerWidth();
+            var mainDropDownHeight = $(".dropdown-menu.dropdown-content").outerHeight();
+            var dropdownContentPanels = $(".dropdown-content-panel");
+            $.each(dropdownContentPanels, function (i, item) {
+                $(item).outerWidth(navbarMenuWidth - dropdownButtonWidth)
+                .css("left", dropdownButtonWidth - 3)
+                .outerHeight(mainDropDownHeight);
+            })
         });
 
-    </script>
+        $(window).trigger('resize');
+    });
+
+</script>
