--- a/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
@@ -17,7 +17,7 @@
             </form>
         </div>
         <div class="col-md-4 col-sm-12 col-xs-12 header-right footer-bottom">
-            <a class="btn-pricereport">Báo giá nhanh</a>
+            <a href="@Url.Action("QuickQuote", "Home")" class="btn-pricereport">Báo giá nhanh</a>
             <ul>
                 <li>
                     <a href="mailto:info@example.com">info@example.com</a>
