Clean code and add comment for service api

--- a/OnlineStoreMVC/Views/Home/Index.cshtml
+++ b/OnlineStoreMVC/Views/Home/Index.cshtml
@@ -31,37 +31,9 @@
 }
 
 <div ng-app="ecom_HomePage">
-    <!-- banner -->
-    @*<div class="banner-grid">
-        <div id="visual">
-            <div class="slide-visual">
-                <!-- Slide Image Area (1000 x 424) -->
-                <ul class="slide-group">
-                    <li><img class="img-responsive" src="~/Content/Images/TestImages/ba1.jpg" alt="Dummy Image" /></li>
-                    <li><img class="img-responsive" src="~/Content/Images/TestImages/ba2.jpg" alt="Dummy Image" /></li>
-                    <li><img class="img-responsive" src="~/Content/Images/TestImages/ba3.jpg" alt="Dummy Image" /></li>
-                </ul>
-
-                <!-- Slide Description Image Area (316 x 328) -->
-                <div class="script-wrap">
-                    <ul class="script-group">
-                        <li><div class="inner-script"><img class="img-responsive" src="~/Content/Images/TestImages/baa1.jpg" alt="Dummy Image" /></div></li>
-                        <li><div class="inner-script"><img class="img-responsive" src="~/Content/Images/TestImages/baa2.jpg" alt="Dummy Image" /></div></li>
-                        <li><div class="inner-script"><img class="img-responsive" src="~/Content/Images/TestImages/baa3.jpg" alt="Dummy Image" /></div></li>
-                    </ul>
-                    <div class="slide-controller">
-                        <a href="#" class="btn-prev"><img src="~/Content/Images/TestImages/btn_prev.png" alt="Prev Slide" /></a>
-                        <a href="#" class="btn-play"><img src="~/Content/Images/TestImages/btn_play.png" alt="Start Slide" /></a>
-                        <a href="#" class="btn-pause"><img src="~/Content/Images/TestImages/btn_pause.png" alt="Pause Slide" /></a>
-                        <a href="#" class="btn-next"><img src="~/Content/Images/TestImages/btn_next.png" alt="Next Slide" /></a>
-                    </div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-            <div class="clearfix"></div>
-        </div>
-    </div>*@
-    <!-- //banner -->
+    <!-- Start banner top -->
+    @*@Html.Partial("_BannerTop")*@
+    <!-- End banner top -->
     <!-- content -->
 
     <div ng-controller="ecom_Main_Controller as ctrl" class="product-easy">
