--- a/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNet.Identity
 
-<!-- header-bot -->
+<!-- start header-bot -->
 <div class="header-bot">
     <div class="container">
         <div class="col-md-2 col-sm-12 col-xs-12 header-left">
@@ -32,8 +32,9 @@
         <div class="clearfix"></div>
     </div>
 </div>
-<!-- //header-bot -->
-<!-- banner -->
+<!-- end header-bot -->
+
+<!-- start main menu -->
 <div class="ban-top">
     <div class="container">
         <div class="top_nav_left">
@@ -68,45 +69,13 @@
                 </div>
             </nav>
         </div>
-        @*<div class="top_nav_right">
-                <div class="cart box_1">
-                    <a href="checkout.html">
-                        <h3>
-                            <div class="total">
-                                <i class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></i>
-                                <span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span> items)
-                            </div>
-
-                        </h3>
-                    </a>
-                    <p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
-
-                </div>
-            </div>*@
         <div class="clearfix"></div>
     </div>
 </div>
-<!-- //banner-top -->
-@*<div class="container b-mainbrand-topmenu">
-        <div class="row">
-            <div class="divCategory_HomePage_Container">
-
-                @{
-                    var categoriesList = ViewBag.TopCategoriesList as IEnumerable<OnlineStore.Model.ViewModel.SummaryCategoryViewModel>;
-                    foreach (var category in categoriesList)
-                    {
-
-                        <div class="col-sm-2 divCategory_HomePage">
-                            <a href="/Product/GetProductByCategory/@category.Id"><i class="fa fa-angle-right" aria-hidden="true"></i>@category.Name</a>
-                        </div>
-
-                    }
-                }
-            </div>
-        </div>
-    </div>*@
+<!-- end main menu -->
 
 <script>
+    // handle responsive for main menu
     $(function () {
         $(window).resize(function () {
             var dropdownButtonWidth = $(".dropdown-menu.dropdown-content").outerWidth();
@@ -117,7 +86,7 @@
                 $(item).outerWidth(navbarMenuWidth - dropdownButtonWidth)
                 .css("left", dropdownButtonWidth - 3)
                 .outerHeight(mainDropDownHeight);
-            })
+            });
         });
 
         $(window).trigger('resize');
