--- a/OnlineStoreMVC/Views/Shared/_Layout.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
 </head>
 <body id="index" class="index hide-left-column hide-right-column lang_en one-column">
     <div id="page">
-        @Html.Action("_HeaderPartial", "Home", new { @searchType = Request.QueryString["searchType"] })
+        @Html.Action("RenderHeaderPartial", "Home", new { @searchType = Request.QueryString["searchType"] })
         <div class="columns-container top-space-body">
             @RenderBody()
         </div>
